修复子目录加载不全